...
            "state" : "translated",
            "value" : "Alle"
          }
        }
      }
    },
    "All Stations" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alle kanaler"
...
            "state" : "translated",
            "value" : "Position"
          }
        }
      }
    },
    "Privacy Policy" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Privatlivspolitik"
...
            "state" : "translated",
            "value" : "Senest afspillet"
          }
        }
      }
    },
    "Recently Searched" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Senest søgt"
...
            "state" : "translated",
            "value" : "Indstil sleep-timer"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Indstillinger"
...
            "state" : "translated",
            "value" : "Genveje"
          }
        }
      }
    },
    "Show Images" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vis billeder"
...
            "state" : "translated",
            "value" : "Stopper radioen, når programmet slutter."
          }
        }
      }
    },
    "Support" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Support"
...
