...
                    text: title,
                    font: .headline,
                    leftFade: 16,
                    rightFade: 16,
                    startDelay: 1.5
                )
                .accessibilityID("player.title")
                .foregroundStyle(Color.primary)

                MarqueeText(
                    text: subtitle,
                    font: .subheadline,
                    leftFade: 16,
...
